--- a/data/decks/tor.yaml
+++ b/data/decks/tor.yaml
@@ -1,6 +1,9 @@
 ---
-name: Tor test deck
-description: This deck runs test related to testing the reachability of the Tor network
+name: Test Tor
+description: "This deck includes tests designed to examine the reachability of the Tor network and Tor bridges.
+    The Vanilla Tor test examines the reachability of the Tor network.
+    The Tor Bridges test examines the reachability of Tor bridges in your network.
+    The Meek Fronted Requests test examines whether the domains used by Meek (a type of Tor bridge) work in your network."
 schedule: "@daily"
 icon: "fa-wrench"
 tasks:
@@ -8,7 +11,7 @@ tasks:
   ooni:
     test_name: vanilla_tor
 
-- name: Runs the Meek fronted request test
+- name: Runs the Meek Fronted Requests test
   ooni:
     test_name: meek_fronted_requests
 
