--- a/data/decks/http-invalid.yaml
+++ b/data/decks/http-invalid.yaml
@@ -1,5 +1,5 @@
 ---
-name: Test for Surveillance
+name: Test for Middle Boxes
 description: "This deck runs the HTTP Invalid
 Request Line test which tries to detect censorship and/or surveillance systems
 in your network by sending an HTTP invalid request line to an echo server."
